added separate pages for user profile and game

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,14 @@
                 <data android:host="auth" android:scheme="spotifywrappedapplication"/>
             </intent-filter>
         </activity>
+        <activity android:name=".UserProfileActivity"
+            android:exported="false">
+            <!-- Add any additional configurations for UserProfileActivity here -->
+        </activity>
+        <activity android:name=".GameActivity"
+            android:exported="false">
+        </activity>
+
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
