--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,14 @@
             android:exported="false">
             <!-- Add any additional configurations for UserProfileActivity here -->
         </activity>
+        <activity android:name=".WelcomeScreenActivity"
+            android:exported="false">
+            <!-- Add any additional configurations for UserProfileActivity here -->
+        </activity>
+        <activity android:name=".WrappedPartOneActivity"
+            android:exported="false">
+            <!-- Add any additional configurations for UserProfileActivity here -->
+        </activity>
         <activity android:name=".GameActivity"
             android:exported="false">
         </activity>
