--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,21 +13,30 @@
         android:theme="@style/Theme.SpotifyWrappedApplication"
         tools:targetApi="31">
         <activity
+            android:name=".GameNavActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
-                <data android:host="auth" android:scheme="spotifywrappedapplication"/>
+
+                <data
+                    android:host="auth"
+                    android:scheme="spotifywrappedapplication" />
             </intent-filter>
         </activity>
-        <activity android:name=".UserProfileActivity"
+        <activity
+            android:name=".UserProfileActivity"
             android:exported="false">
+
             <!-- Add any additional configurations for UserProfileActivity here -->
         </activity>
-        <activity android:name=".GameActivity"
-            android:exported="false">
-        </activity>
+        <activity
+            android:name=".GameActivity"
+            android:exported="false"></activity>
 
         <meta-data
             android:name="preloaded_fonts"
