--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation 'com.google.firebase:firebase-database:20.0.3' // Use the latest version
 
+    implementation 'com.squareup.picasso:picasso:2.71828' // for loading image URLs easily
+
 }
