--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,4 +50,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:20.0.3' // Use the latest version
 
     implementation 'com.squareup.picasso:picasso:2.71828' // for loading image URLs easily
+    implementation 'com.jakewharton:butterknife:6.0.0'
+    implementation 'com.google.code.gson:gson:2.3'
 }
