--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
             android:exported="false" />
         <activity android:name=".WrappedEndScreenActivity"
             android:exported="false"/>
-        <activity android:name=".PastSummariesActivity"
+        <activity android:name=".AccountSettingsActivity"
             android:exported="false"/>
         <activity
             android:name=".MainActivity"
